flux/apps/base/homepage/Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: homepage
spec:
  ingressClassName: nginx
  rules:
    - host: home.zshen.me
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
  tls:
    - secretName: homepage-tls
      hosts:
        - home.zshen.me
