flux/apps/base/homepage/homepage.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage-system

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage-system
  labels:
    app.kubernetes.io/name: homepage
spec:
  ingressClassName: nginx
  rules:
    - host: "index.home"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage-system
  labels:
    app.kubernetes.io/name: homepage
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: homepage

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage-system
  labels:
    app.kubernetes.io/name: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: homepage
          image: "ghcr.io/gethomepage/homepage:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config # Mount the entire config map here
              name: homepage-config
            - mountPath: /app/config/logs # Mount logs to a separate top-level directory
              name: logs
      volumes:
        - name: homepage-config
          configMap:
            name: homepage
        - name: logs
          emptyDir: {}
